--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Monitoring docker servers",
   "main": "index.js",
   "scripts": {
-    "copy:rootfiles": "cpy --parents package.json bin/** README.md .npmrc dist/",
-    "copy:clientfiles": "cpy --parents --cwd=client/dist/moniker-client ** ../../../dist/lib-client",
-    "copy:serverfiles": "cpy --parents --cwd=server/dist/lib ** ../../../dist/lib-server",
+    "copy:rootfiles": "cpy --parents \"package.json\" \"bin/**\" \"README.md\" \".npmrc\" \"dist/\"",
+    "copy:clientfiles": "cpy --parents --cwd=\"client/dist/moniker-client\" \"**\" \"../../../dist/lib-client\"",
+    "copy:serverfiles": "cpy --parents --cwd=\"server/dist/lib\" \"**\" \"../../../dist/lib-server\"",
     "copy:all": "npm run copy:rootfiles && npm run copy:clientfiles && npm run copy:serverfiles",
     "dist": "npm run build && npm run copy:all && npm run modifyPackagejson",
     "modifyPackagejson": "node merge-packagejson.js",
-    "build:api": "cd api && npm run build && cd .. && cpy --parents --cwd=api/src ** ../../client/src/app/api/ && cpy --parents --cwd=api/src ** ../../server/src/api/",
+    "build:api": "cd api && npm run build && cd .. && cpy --parents --cwd=\"api/src\" \"**\" \"../../client/src/app/api/\" && cpy --parents --cwd=\"api/src\" \"**\" \"../../server/src/api/\"",
     "build:client": "cd client && npm run build -- --prod && cd ..",
     "build:server": "cd server && npm run dist && cd ..",
     "build": "npm run build:api && npm run build:client && npm run build:server",
